# differential-deconvolution-2D-cuda

./: CMakeLists.txt  DifferentialDeconv2D.cpp  DifferentialDeconv2D.h  README.md  main.cpp
cuda_backend/: CMakeLists.txt  Optimizer.cu  Optimizer.h  OptimizerKernels.cu  OptimizerKernels.h
