cmake_minimum_required(VERSION 3.5)
project(deconv2D-demo LANGUAGES CXX)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_CXX_STANDARD 11)
set(SOURCES main.cpp DifferentialDeconv2D.cpp)
add_subdirectory(cuda_backend)
add_executable(${PROJECT_NAME} ${SOURCES})
find_package(CUDA REQUIRED)
find_package(OpenCV REQUIRED)
include_directories(${PROJECT_NAME} ${CUDA_TOOLKIT_ROOT_DIR})
include_directories(${PROJECT_NAME} ${OpenCV_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} cuda_backend)
target_link_libraries(${PROJECT_NAME} ${CUDA_LIBRARIES})
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
